force-app/main/default/objects/devise__c/fields/Code_ISO4217__c.field-meta.xml
<CustomField>
    <fullName>Code_ISO4217__c</fullName>
    <externalId>true</externalId>
    <label>Code ISO4217</label>
    <length>3</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>