force-app/main/default/objects/devise__c/fields/CodeISO__c.field-meta.xml
<CustomField>
    <fullName>CodeISO__c</fullName>
    <externalId>true</externalId>
    <label>Code ISO</label>
    <length>3</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>