force-app/main/default/objects/devise__c/fields/Date_taux_change__c.field-meta.xml
<CustomField>
    <fullName>Date_taux_change__c</fullName>
    <description>Date du taux de change</description>
    <label>Date du taux de change</label>
    <type>DateTime</type>
</CustomField>