force-app/main/default/objects/devise__c/fields/Erreur_sync__c.field-meta.xml
<CustomField>
    <fullName>Erreur_sync__c</fullName>
    <label>Erreur lors du synchronisation</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>