force-app/main/default/objects/devise__c/fields/Taux_change__c.field-meta.xml
<CustomField>
    <fullName>Taux_change__c</fullName>
    <label>Taux de change</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>